# Dstruct-Lib

./: .gitignore  AUTHORS.md  CMakeLists.txt  Makefile  README.md  build.cmd
include/: dstruct.h  dstruct_const.h  dstruct_def.h  dstruct_list.h  dstruct_queue.h  dstruct_stack.h  dstruct_types.h
include/dstruct/: dstruct.h  dstruct_const.h  dstruct_def.h  dstruct_list.h  dstruct_queue.h  dstruct_stack.h
src/: dstruct_list.c  dstruct_stack.c
test/: main.c
